--- a/index.html
+++ b/index.html
@@ -5,40 +5,38 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Cookie Shop</title>
+    <title>Joey's Cookie Shop</title>
 </head>
 
 <body>
     <header>
-        <h1>The Cookie Shop</h1>
+        <h1>Joey's Cookie Shop</h1>
         <nav>
             <ul>
-                <li><a href='/index.html'>Link 1</a></li>
-                <li><a href='/'>Link 2</a></li>
-                <li><a href='/'>Link 3</a></li>
+                <li><a href="/">Link 1</a></li>
+                <li><a href="/">Link 2</a></li>
+                <li><a href="/">Link 3</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <img src='https://via.placeholder.com/960x640.png?text=Cookie+Shop+Store+Front'
-                alt='The Cookie Shop Store Front'>
+            <img src="/img/cookies.jpg" alt="The Cookie Shop Store Front" />
         </section>
         <section>
-            <img src='https://via.placeholder.com/300x150.png?text=Cookie+Image+1' alt='Cookie Image 1'>
+            <img src="/img/cookie1.jpg" alt="Cookie Image 1" />
         </section>
         <section>
-            <img src='https://via.placeholder.com/300x150.png?text=Cookie+Image+1' alt='Cookie Image 1'>
+            <img src="/img/cookie2.jpg" alt="Cookie Image 1" />
         </section>
         <section>
-            <img src='https://via.placeholder.com/300x150.png?text=Cookie+Image+1' alt='Cookie Image 1'>
+            <img src="/img/cookie3.jpg" alt="Cookie Image 1" />
         </section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa amet repudiandae modi fuga excepturi pariatur
-            quis vel suscipit cumque asperiores corrupti cum fugiat ut veniam odit, esse ex. Similique, iusto.</p>
+        <p>
+            Here at Joey's Cookie Shop, we pride ourselves on having only the most delicious tasting cookies possible.
+        </p>
     </main>
-    <footer>
-        &copy; The Cookie Shop
-    </footer>
+    <footer>&copy; Joey's Cookie Shop</footer>
 </body>
 
 </html>
