--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Joey's Cookie Shop</h1>
+        <h1>Joey's Cookie Trap</h1>
         <nav>
             <ul>
                 <li><a href="/">Link 1</a></li>
@@ -33,10 +33,10 @@
             <img src="/img/cookie3.jpg" alt="Cookie Image 1" />
         </section>
         <p>
-            Here at Joey's Cookie Shop, we pride ourselves on having only the most delicious tasting cookies possible.
+            Here at Joey's Cookie Trap, we will trap you in a vault made of cookies and force you to eat your way out.
         </p>
     </main>
-    <footer>&copy; Joey's Cookie Shop</footer>
+    <footer>&copy; Joey's Cookie Trap</footer>
 </body>
 
 </html>
