fix path for images

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     </header>
     <main>
         <section>
-            <img src="/img/cookies.jpg" alt="The Cookie Shop Store Front" />
+            <img src="./img/cookies.jpg" alt="The Cookie Shop Store Front" />
         </section>
         <section>
-            <img src="/img/cookie1.jpg" alt="Cookie Image 1" />
+            <img src="./img/cookie1.jpg" alt="Cookie Image 1" />
         </section>
         <section>
-            <img src="/img/cookie2.jpg" alt="Cookie Image 1" />
+            <img src="./img/cookie2.jpg" alt="Cookie Image 1" />
         </section>
         <section>
-            <img src="/img/cookie3.jpg" alt="Cookie Image 1" />
+            <img src="./img/cookie3.jpg" alt="Cookie Image 1" />
         </section>
         <p>
             Here at Joey's Cookie Trap, we will trap you in a vault made of cookies and force you to eat your way out.
