added more descriptive alt tags for clarity. gave links titles.

--- a/index.html
+++ b/index.html
@@ -13,24 +13,25 @@
         <h1>Joey's Cookie Shop</h1>
         <nav>
             <ul>
-                <li><a href="/">Link 1</a></li>
-                <li><a href="/">Link 2</a></li>
-                <li><a href="/">Link 3</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/">Our Cookies</a></li>
+                <li><a href="/">Contact Us</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <img src="./img/cookies.jpg" alt="The Cookie Shop Store Front" />
+            <img src="./img/cookies.jpg" alt="Ginger cookies arranged neatly on a pan" />
         </section>
         <section>
-            <img src="./img/cookie1.jpg" alt="Cookie Image 1" />
+            <img src="./img/cookie1.jpg" alt="Colorful macaron cookies" />
         </section>
         <section>
-            <img src="./img/cookie2.jpg" alt="Cookie Image 1" />
+            <img src="./img/cookie2.jpg"
+                alt="Stack of chocolate chip cookies next to a cup of milk, with someone's hand dipping the cookie into the milk." />
         </section>
         <section>
-            <img src="./img/cookie3.jpg" alt="Cookie Image 1" />
+            <img src="./img/cookie3.jpg" alt="Pile of chocolate chip cookies" />
         </section>
         <p>
             Here at Joey's Cookie Shop, we pride ourselves on providing our customers with the most delicious cookies.
