changed img directory to images

--- a/index.html
+++ b/index.html
@@ -21,20 +21,21 @@
     </header>
     <main>
         <section>
-            <img src="./img/cookies.jpg" alt="Ginger cookies arranged neatly on a pan" />
+            <img src="./images/cookies.jpg" alt="Ginger cookies arranged neatly on a pan" />
         </section>
         <section>
-            <img src="./img/cookie1.jpg" alt="Colorful macaron cookies" />
+            <img src="./images/cookie1.jpg" alt="Colorful macaron cookies" />
         </section>
         <section>
-            <img src="./img/cookie2.jpg"
+            <img src="./images/cookie2.jpg"
                 alt="Stack of chocolate chip cookies next to a cup of milk, with someone's hand dipping the cookie into the milk." />
         </section>
         <section>
-            <img src="./img/cookie3.jpg" alt="Pile of chocolate chip cookies" />
+            <img src="./images/cookie3.jpg" alt="Pile of chocolate chip cookies" />
         </section>
         <p>
-            Here at Joey's Cookie Shop, we pride ourselves on providing our customers with the most delicious cookies.
+            Here at Joey's Cookie Shop, we pride ourselves on providing our
+            customers with the most delicious cookies.
         </p>
     </main>
     <footer>&copy; Joey's Cookie Shop</footer>
