--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel='stylesheet' href='style.css'>
     <title>Joey's Cookie Shop</title>
 </head>
 
@@ -21,24 +22,40 @@
     </header>
     <main>
         <section>
-            <img src="./images/cookies.jpg" alt="Ginger cookies arranged neatly on a pan" />
+            <img id='bigImage' src="./images/cookies.jpg" alt="Ginger cookies arranged neatly on a pan" />
         </section>
-        <section>
-            <img src="./images/cookie1.jpg" alt="Colorful macaron cookies" />
+        <section id='subImages'>
+            <ul>
+                <li><img src="./images/cookie1.jpg" alt="Colorful macaron cookies" />
+                    <p>
+                        ipsum doo dee doo dee doo
+                    </p>
+                </li>
+                <li><img src="./images/cookie2.jpg"
+                        alt="Stack of chocolate chip cookies next to a cup of milk, with someone's hand dipping the cookie into the milk." />
+                    <p>
+                        ipsum doo dee doo dee doo
+                    </p>
+                </li>
+                <li><img src="./images/cookie3.jpg" alt="Pile of chocolate chip cookies" />
+                    <p>
+                        ipsum doo dee doo dee doo
+                    </p>
+                </li>
+            </ul>
         </section>
-        <section>
-            <img src="./images/cookie2.jpg"
-                alt="Stack of chocolate chip cookies next to a cup of milk, with someone's hand dipping the cookie into the milk." />
-        </section>
-        <section>
-            <img src="./images/cookie3.jpg" alt="Pile of chocolate chip cookies" />
-        </section>
-        <p>
-            Here at Joey's Cookie Shop, we pride ourselves on providing our
-            customers with the most delicious cookies.
-        </p>
+        <article>
+            <h2>Only the Best Cookies</h2>
+            <p>
+                Here at Joey's Cookie Shop, we pride ourselves on providing our
+                customers with the most delicious cookies.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </article>
+
     </main>
-    <footer>&copy; Joey's Cookie Shop</footer>
+    <footer>
+        <p>&copy;2022 Joey's Cookie Shop
+    </footer>
 </body>
 
 </html>
