create app.js file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </nav>
     </header>
     <main>
+        <h2><script src='app.js'></script></h2>
         <section>
             <img id='bigImage' src="./images/cookies.jpg" alt="Ginger cookies arranged neatly on a pan" />
         </section>
