--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <h2><script src='app.js'></script></h2>
+        <h2 id='colorChange'><script src='app.js'></script></h2>
         <section>
             <img id='bigImage' src="./images/cookies.jpg" alt="Ginger cookies arranged neatly on a pan" />
         </section>
@@ -49,7 +49,7 @@
             <h2>Only the Best Cookies</h2>
             <p>
                 Here at Joey's Cookie Shop, we pride ourselves on providing our
-                customers with the most delicious cookies.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                customers with the most delicious cookies. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
         </article>
 
