solve  color change stretch goal

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Joey's Cookie Shop</title>
 </head>
 
-<body>
+<body id="body">
     <header>
         <h1>Joey's Cookie Shop</h1>
         <nav>
